kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-gateway
  namespace: hotel-dev
  labels:
    app: kong-gateway
    ingress-class: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-gateway
  template:
    metadata:
      labels:
        app: kong-gateway
        ingress-class: kong
    spec:
      containers:
        - name: kong
          image: registry.connect.redhat.com/kong/kong:3.1.1
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8001
              name: admin
          readinessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: kong-plugins
              mountPath: /usr/local/share/lua/5.1/kong/plugins/custom-auth
      volumes:
        - name: kong-plugins
          configMap:
            name: kong-custom-plugins
