kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway
  namespace: hotel-dev
spec:
  selector:
    app: kong-gateway
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
