kong-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kong-gateway
  namespace: hotel-dev
spec:
  to:
    kind: Service
    name: kong-gateway
  port:
    targetPort: proxy
